--- a/Dockerfile.complete.stable
+++ b/Dockerfile.complete.stable
@@ -75,16 +75,17 @@ RUN echo '[supervisord]' > /etc/supervisor/conf.d/supervisord.conf \
     && echo 'directory=/app' >> /etc/supervisor/conf.d/supervisord.conf \
     && echo 'autostart=true' >> /etc/supervisor/conf.d/supervisord.conf \
     && echo 'autorestart=true' >> /etc/supervisor/conf.d/supervisord.conf \
-    && echo 'environment=PORT="8000",LOCAL_API_URL="http://localhost:8081"' >> /etc/supervisor/conf.d/supervisord.conf \
+    && echo 'environment=LOCAL_API_URL="http://localhost:8081"' >> /etc/supervisor/conf.d/supervisord.conf \
     && echo 'stderr_logfile=/var/log/api-proxy.err.log' >> /etc/supervisor/conf.d/supervisord.conf \
     && echo 'stdout_logfile=/var/log/api-proxy.out.log' >> /etc/supervisor/conf.d/supervisord.conf
 
 # 포트 노출
-EXPOSE 8000 8081
+# Railway가 자동으로 PORT 환경 변수를 설정하므로 동적으로 사용됨
+EXPOSE 8080 8081
 
-# Health check
+# Health check (Railway의 PORT 환경 변수 사용)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
-  CMD curl -f http://localhost:8000/health || exit 1
+  CMD curl -f http://localhost:${PORT:-8080}/health || exit 1
 
 # Supervisor로 두 서비스 모두 실행
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
