--- a/Dockerfile.complete.stable
+++ b/Dockerfile.complete.stable
@@ -15,15 +15,30 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # 공식 Telegram Bot API Server 바이너리 다운로드 및 설치
-# 안정적인 특정 버전 사용 (7.7.0)
+# GitHub API를 사용하여 최신 릴리스 URL 동적 가져오기
 # 모든 설치 단계를 하나의 RUN 블록으로 통합
-RUN DOWNLOAD_URL="https://github.com/tdlib/telegram-bot-api/releases/download/7.7.0/telegram-bot-api_Linux_x86_64.tar.gz" \
+RUN DOWNLOAD_URL=$(curl -sL https://api.github.com/repos/tdlib/telegram-bot-api/releases/latest | \
+    grep -o '"browser_download_url": "[^"]*Linux_x86_64.tar.gz"' | \
+    head -1 | \
+    cut -d '"' -f 4) \
+    && if [ -z "$DOWNLOAD_URL" ] || [ "$DOWNLOAD_URL" = "null" ]; then \
+        echo "ERROR: Failed to get download URL from GitHub API"; \
+        echo "Trying fallback URL..."; \
+        DOWNLOAD_URL="https://github.com/tdlib/telegram-bot-api/releases/latest/download/telegram-bot-api_Linux_x86_64.tar.gz"; \
+    fi \
     && echo "Downloading telegram-bot-api from: $DOWNLOAD_URL" \
     && curl -L -f -o telegram-bot-api.tar.gz "$DOWNLOAD_URL" \
-    && if [ ! -f telegram-bot-api.tar.gz ] || [ ! -s telegram-bot-api.tar.gz ]; then \
-        echo "ERROR: Download failed or file is empty"; \
+    && CURL_EXIT_CODE=$? \
+    && if [ $CURL_EXIT_CODE -ne 0 ]; then \
+        echo "ERROR: curl failed with exit code $CURL_EXIT_CODE"; \
         exit 1; \
     fi \
+    && if [ ! -f telegram-bot-api.tar.gz ] || [ ! -s telegram-bot-api.tar.gz ]; then \
+        echo "ERROR: Download failed or file is empty"; \
+        echo "File size: $(ls -lh telegram-bot-api.tar.gz 2>/dev/null || echo 'file not found')"; \
+        exit 1; \
+    fi \
+    && echo "Download successful, file size: $(ls -lh telegram-bot-api.tar.gz | awk '{print $5}')" \
     && echo "Extracting archive..." \
     && tar -xzf telegram-bot-api.tar.gz \
     && echo "Contents after extraction:" \
