--- a/Dockerfile.complete.stable
+++ b/Dockerfile.complete.stable
@@ -16,26 +16,19 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # 공식 Telegram Bot API Server 바이너리 다운로드 및 설치
-# GitHub API를 사용하여 최신 릴리스 URL 동적 가져오기
+# 실제로 작동하는 특정 버전의 다운로드 URL 직접 사용
 # 모든 설치 단계를 하나의 RUN 블록으로 통합
 # set -e를 사용하여 에러 발생 시 즉시 종료
 RUN set -e \
-    && echo "Fetching latest release URL from GitHub API..." \
-    && API_RESPONSE=$(curl -sL https://api.github.com/repos/tdlib/telegram-bot-api/releases/latest) \
-    && DOWNLOAD_URL=$(echo "$API_RESPONSE" | jq -r '.assets[] | select(.name | contains("Linux_x86_64.tar.gz")) | .browser_download_url' | head -1) \
-    && if [ -z "$DOWNLOAD_URL" ] || [ "$DOWNLOAD_URL" = "null" ] || [ "$DOWNLOAD_URL" = "" ]; then \
-        echo "ERROR: Failed to get download URL from GitHub API"; \
-        echo "API Response: $API_RESPONSE"; \
-        echo "Trying alternative method with grep..."; \
-        DOWNLOAD_URL=$(echo "$API_RESPONSE" | grep -o '"browser_download_url": "[^"]*Linux_x86_64.tar.gz"' | head -1 | cut -d '"' -f 4); \
-    fi \
-    && if [ -z "$DOWNLOAD_URL" ] || [ "$DOWNLOAD_URL" = "null" ] || [ "$DOWNLOAD_URL" = "" ]; then \
-        echo "ERROR: All methods failed to get download URL"; \
-        exit 1; \
-    fi \
-    && echo "Download URL: $DOWNLOAD_URL" \
     && echo "Downloading telegram-bot-api..." \
-    && curl -L -f -o telegram-bot-api.tar.gz "$DOWNLOAD_URL" \
+    && DOWNLOAD_URL="https://github.com/tdlib/telegram-bot-api/releases/download/8.0.0/telegram-bot-api_Linux_x86_64.tar.gz" \
+    && echo "Download URL: $DOWNLOAD_URL" \
+    && curl -L -f -o telegram-bot-api.tar.gz "$DOWNLOAD_URL" || ( \
+        echo "First URL failed, trying alternative..." \
+        && DOWNLOAD_URL="https://github.com/tdlib/telegram-bot-api/releases/download/7.8.0/telegram-bot-api_Linux_x86_64.tar.gz" \
+        && echo "Alternative URL: $DOWNLOAD_URL" \
+        && curl -L -f -o telegram-bot-api.tar.gz "$DOWNLOAD_URL" \
+    ) \
     && if [ ! -f telegram-bot-api.tar.gz ] || [ ! -s telegram-bot-api.tar.gz ]; then \
         echo "ERROR: Download failed or file is empty"; \
         ls -lh telegram-bot-api.tar.gz 2>/dev/null || echo "File does not exist"; \
