--- a/Dockerfile.complete.stable
+++ b/Dockerfile.complete.stable
@@ -13,22 +13,13 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # 공식 Telegram Bot API Server 바이너리 다운로드
-# Dockerfile.complete의 검증된 방식 사용
-RUN DOWNLOAD_URL=$(curl -sL https://api.github.com/repos/tdlib/telegram-bot-api/releases/latest | \
-    grep -o '"browser_download_url": "[^"]*Linux_x86_64.tar.gz"' | \
-    head -1 | \
-    cut -d '"' -f 4) \
-    && if [ -z "$DOWNLOAD_URL" ]; then \
-        echo "ERROR: Failed to get download URL from GitHub API"; \
-        echo "Trying alternative method..."; \
-        DOWNLOAD_URL="https://github.com/tdlib/telegram-bot-api/releases/latest/download/telegram-bot-api_Linux_x86_64.tar.gz"; \
-    fi \
-    && echo "Downloading from: $DOWNLOAD_URL" \
-    && curl -L -f -o telegram-bot-api.tar.gz "$DOWNLOAD_URL" \
-    && if [ ! -f telegram-bot-api.tar.gz ] || [ ! -s telegram-bot-api.tar.gz ]; then \
-        echo "ERROR: Download failed or file is empty"; \
-        exit 1; \
-    fi \
+# 실제 존재하는 버전 사용 (Dockerfile.local-api 방식 참고)
+RUN set -e \
+    && echo "Downloading telegram-bot-api..." \
+    && curl -L -f -o telegram-bot-api.tar.gz "https://github.com/tdlib/telegram-bot-api/releases/download/v7.7.0/telegram-bot-api_Linux_x86_64.tar.gz" \
+    || curl -L -f -o telegram-bot-api.tar.gz "https://github.com/tdlib/telegram-bot-api/releases/download/v7.8.0/telegram-bot-api_Linux_x86_64.tar.gz" \
+    || curl -L -f -o telegram-bot-api.tar.gz "https://github.com/tdlib/telegram-bot-api/releases/download/v8.0.0/telegram-bot-api_Linux_x86_64.tar.gz" \
+    || (echo "ERROR: All download URLs failed" && exit 1) \
     && tar -xzf telegram-bot-api.tar.gz \
     && if [ ! -f telegram-bot-api ]; then \
         echo "ERROR: telegram-bot-api binary not found after extraction"; \
@@ -37,7 +28,8 @@ RUN DOWNLOAD_URL=$(curl -sL https://api.github.com/repos/tdlib/telegram-bot-api/
     fi \
     && mv telegram-bot-api /usr/local/bin/telegram-bot-api \
     && chmod +x /usr/local/bin/telegram-bot-api \
-    && rm -f telegram-bot-api.tar.gz
+    && rm -f telegram-bot-api.tar.gz \
+    && echo "Successfully installed telegram-bot-api"
 
 # 데이터 디렉토리 생성
 RUN mkdir -p /var/lib/telegram-bot-api
