--- a/Dockerfile.complete.stable
+++ b/Dockerfile.complete.stable
@@ -1,11 +1,8 @@
-# aiogram/telegram-bot-api 이미지 사용 (Docker Hub에서 제공)
+# aiogram/telegram-bot-api 이미지 사용
 FROM aiogram/telegram-bot-api:latest
 
-# Local 모드 비활성화 (HTTP 파일 다운로드 지원)
-# TELEGRAM_LOCAL=1을 사용하면 파일이 로컬에 저장되어 HTTP로 접근 불가
-# 비활성화하면 /file/bot{TOKEN}/{file_path} 형식으로 다운로드 가능
+# 포트 노출
+EXPOSE 8080
 
-# Railway 환경 변수에서 다음을 설정해야 함:
-# - TELEGRAM_API_ID
-# - TELEGRAM_API_HASH
-# - TELEGRAM_HTTP_PORT (Railway PORT 값 사용)
+# 환경 변수를 직접 CMD에서 사용
+CMD ["sh", "-c", "telegram-bot-api --api-id=${TELEGRAM_API_ID} --api-hash=${TELEGRAM_API_HASH} --http-port=${PORT:-8080} --dir=/var/lib/telegram-bot-api"]
